<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="au.com.dylanaird.android.s3249319ass1.view.NewParty">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/newPartyLocationHint"
        android:id="@+id/etNewpartyLocation"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/etNewPartyVenue" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etNewPartyVenue"
        android:layout_below="@+id/etNewpartyLocation"
        android:hint="@string/newPartyVenueHint"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/etNewPartyDate" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:hint="@string/newPartyDateHint"
        android:id="@+id/etNewPartyDate"
        android:layout_below="@+id/etNewPartyVenue"
        android:layout_alignParentStart="true" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lvAttendees"
        android:layout_below="@+id/bAddAttendees"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:hint="@string/newPartyTimeHint"
        android:id="@+id/etNewPartyTime"
        android:layout_below="@+id/etNewPartyDate"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bNewPartyAddAttendees"
        android:id="@+id/bAddAttendees"
        android:layout_below="@+id/etNewPartyTime"
        android:layout_alignParentStart="true" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bPartyAdd"
        android:id="@+id/bCreateNewParty"
        android:layout_above="@+id/lvAttendees"
        android:layout_toEndOf="@+id/bAddAttendees" />


</RelativeLayout>
